Fix responsive tables overflowing when there are too few rows

--- a/src/assets/styles/module/scroll-hint/_scroll-hint.scss
+++ b/src/assets/styles/module/scroll-hint/_scroll-hint.scss
@@ -11,3 +11,9 @@
 @use "scroll-hint/scss/scroll-hint";
 
 // Custom
+
+.scroll-hint-icon-wrap {
+    & {
+        overflow: hidden; // fixes issue with tables that are too short
+    }
+}
